ZFIN-10069: Remove references to vega load pub. Treat the vega load pub similarly to if it were a manually curated pub. - Remove dependent RNA sequences from the vega matched ncbi gene IDs - SQL using internal load script instead of liquibase script so before/after report will include changes - Create logic to retain vega matches if they are not overridden by better matching during the load - Use native sql for performance issues